@@ -163,7 +163,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-exports=org.simpleflatmapper.poi/org.simpleflatmapper.poi.test=org.simpleflatmapper.reflect</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
